<resources>
    <string name="app_name">LocationApp</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_ip">Please Enter IP/Domain: </string>
    <string name="search">Search</string>
    <string name="ip_label">IP: </string>
    <string name="ip_value">[ip]</string>
    <string name="country_label">Country: </string>
    <string name="country_value">[country]</string>
    <string name="city_label">City:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="city_value">[city]</string>
    <string name="latitude_value">[latitude]</string>
    <string name="longitude_value">[longitude]</string>
    <string name="view_map">View Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">This is your location</string>
    <string name="show_variables">View Variables</string>
    <string name="btnSearchIp">Find IP Address Geolocation</string>
    <string name="btnHistory">History of IP addresses</string>
    <string name="get_country_info">Country Info</string>

    <!-- Strings related to web services -->
    <string name="location_service">https://freegeoip.net/json/</string>
    <string name="variables_service">http://geodata.grid.unep.ch/api/</string>

    <!-- Activity titles -->
    <string name="login_activity_title">Login</string>
    <string name="variables_activity_title">Variables</string>
    <string name="country_info_activity_title">Find Location</string>
    <string name="title_activity_home">Menu</string>
    <string name="countryDetails">Country Details</string>
</resources>
