<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/ip_label"
                android:text="@string/ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/country_label"
                android:text="@string/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/ip_label"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/city_label"
                android:text="@string/city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/country_label"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/latitude_label"
                android:text="@string/latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/city_label"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/longitude_label"
                android:text="@string/longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/latitude_label"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/ip_value"
                android:text="@string/ip_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ip_label"
                android:layout_marginLeft="100dp" />

            <TextView
                android:id="@+id/country_value"
                android:text="@string/country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/country_label"
                android:layout_alignLeft="@+id/ip_value" />

            <TextView
                android:id="@+id/city_value"
                android:text="@string/city_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/city_label"
                android:layout_alignLeft="@+id/country_value" />

            <TextView
                android:id="@+id/latitude_value"
                android:text="@string/latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/latitude_label"
                android:layout_alignLeft="@+id/city_value" />

            <TextView
                android:id="@+id/longitude_value"
                android:text="@string/longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/longitude_label"
                android:layout_alignLeft="@+id/latitude_value" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/longitude_label"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/view_map_button"
                    android:text="@string/view_map"
                    android:onClick="onOpenMapEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/view_variables_button"
                    android:text="@string/show_variables"
                    android:onClick="onClickVariablesButtonEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/get_country_info"
                    android:text="@string/get_country_info"
                    android:onClick="onGetCountryInfoEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
